# prefab.MobileTrunk

./: .gitignore  .gitmodules  README.md
dynamixel_trunk/DynamixelSDK/dynamixel_sdk_examples/: package.xml
dynamixel_trunk/Keyboard_trunk_controller/: package.xml  setup.cfg  setup.py
dynamixel_trunk/Keyboard_trunk_controller/keyboard_trunk_controller/: keyboard_controller.py  set_position_to_float64_converter.py
mobile_trunk_sim/: MappingSummitXL.py  MultiMappingConnection.py  addCamera.py  beforecommit_summit_xl.py  collision_test.py  createEchelon.py  echelon3.py  floor.py  mobile_trunk.py  parameters.py  realSummitXL.py  realsummitXL.py.py  ros_publisher.py  ros_summitxl.py  scene.py  scene1.py  summit_xl.py  summit_xl_and_trunk.py  summit_xl_controller.py  summit_xl_cover.py  summit_xl_description.py  summit_xl_ros_controller.py  summitxl_controller.py  summitxl_roscontroller.py  test_ros_controller.py  wheel.py  wheels_angles_compute.py
mobile_trunk_sim/echelon3/: BaseController.py  CableController.py  ForceController.py  MultiMappingConnection.py  RosCableController.py  SpringConnection.py  classEchelon.py  createEchelon.py  echelon3.py  parameters.py
mobile_trunk_sim/functional_test/: test.py
mobile_trunk_sim/meshes/: Assembly.stl  collision_wheel.stl  model_colision.stl  trunk.stl  wheel.stl
mobile_trunk_ws/src/bag_recorder_nodes/: CMakeLists.txt
test/join_states_data_processing/: digital_twin_data_interpolation.py  join_states_data_processing.py  summit_xl_data_interpolation.py
test/src/somorob/: CMakeLists.txt
(+25 files in other folders)
